[gd_scene load_steps=18 format=3 uid="uid://dauogi7w7nv63"]

[ext_resource type="PackedScene" uid="uid://17jiwh6m5kdo" path="res://enemies/enemy.tscn" id="1_dm1ul"]
[ext_resource type="Script" path="res://enemies/pink_enemy.gd" id="2_cglk6"]
[ext_resource type="Texture2D" uid="uid://605kt0417ba5" path="res://assets/pink_enemy.png" id="2_k2lal"]
[ext_resource type="Script" path="res://components/timed_state_componoent.gd" id="3_4mw84"]
[ext_resource type="Script" path="res://components/move_component.gd" id="4_1na5s"]
[ext_resource type="Script" path="res://components/border_bounce_component.gd" id="5_lh7w1"]
[ext_resource type="Script" path="res://components/state_component.gd" id="7_fjnw7"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="8_aul3a"]
[ext_resource type="PackedScene" uid="uid://bw4ihoshwouh1" path="res://projectiles/pink_enemy_projectile.tscn" id="9_8106b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_76vrj"]
atlas = ExtResource("2_k2lal")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqgtn"]
atlas = ExtResource("2_k2lal")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwke8"]
atlas = ExtResource("2_k2lal")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueq3j"]
atlas = ExtResource("2_k2lal")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhryk"]
atlas = ExtResource("2_k2lal")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qx3sc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76vrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqgtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwke8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueq3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhryk")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_64ydt"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iyjhr"]
radius = 6.0

[node name="PinkEnemy" instance=ExtResource("1_dm1ul")]
script = ExtResource("2_cglk6")

[node name="VisibleOnScreenNotifier2D" parent="." index="0"]
position = Vector2(-1.19209e-07, -0.5)
scale = Vector2(0.7, 0.65)

[node name="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_qx3sc")
autoplay = "default"
frame_progress = 0.749396

[node name="StatsComponent" parent="." index="2"]
health = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
shape = SubResource("CircleShape2D_64ydt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" index="0"]
shape = SubResource("CircleShape2D_iyjhr")
debug_color = Color(0.992157, 0, 0.270588, 0.419608)

[node name="ScoreComponent" parent="." index="12"]
adjust_amount = 20

[node name="States" type="Node" parent="." index="13"]

[node name="MoveDownState" type="Node" parent="States" index="0"]
unique_name_in_owner = true
script = ExtResource("3_4mw84")
duration = 2.0

[node name="MoveComponent" type="Node" parent="States/MoveDownState" index="0" node_paths=PackedStringArray("actor")]
script = ExtResource("4_1na5s")
actor = NodePath("../../..")
velocity = Vector2(0, 15)

[node name="MoveSideState" type="Node" parent="States" index="1"]
unique_name_in_owner = true
script = ExtResource("3_4mw84")
duration = 2.0

[node name="MoveSideComponent" type="Node" parent="States/MoveSideState" index="0" node_paths=PackedStringArray("actor")]
unique_name_in_owner = true
script = ExtResource("4_1na5s")
actor = NodePath("../../..")
velocity = Vector2(20, 0)

[node name="BorderBounceComponent" type="Node" parent="States/MoveSideState" index="1" node_paths=PackedStringArray("actor", "move_component")]
script = ExtResource("5_lh7w1")
actor = NodePath("../../..")
move_component = NodePath("../MoveSideComponent")

[node name="FireState" type="Node" parent="States" index="2"]
unique_name_in_owner = true
script = ExtResource("7_fjnw7")

[node name="ProjectileSpawnerComponent" type="Node2D" parent="States/FireState" index="0"]
unique_name_in_owner = true
script = ExtResource("8_aul3a")
scene = ExtResource("9_8106b")

[node name="PauseState" type="Node" parent="States" index="3"]
unique_name_in_owner = true
script = ExtResource("3_4mw84")
duration = 3.0
